Hide the nav label specifically on desktop version only
Signed-off-by: Huong Nguyen <huong.nguyen@mckinsey.com>

--- a/docs/stylesheets/globals.css
+++ b/docs/stylesheets/globals.css
@@ -342,6 +342,11 @@ pre:hover .md-clipboard {
     order: 3;
     margin-left: -0.8rem !important;
   }
+
+  /** Hide the nav label specifically on desktop version only */
+  #__nav_2_label {
+    display: none;
+  }
 }
 
 /** MOBILE STYLES */
