Fix a bunch of typos
Signed-off-by: Yury Fedotov <yury_fedotov@mckinsey.com>

--- a/docs/stylesheets/globals.css
+++ b/docs/stylesheets/globals.css
@@ -250,7 +250,7 @@
   color: var(--text-secondary-color);
 }
 
-/** hightlight the copy icon buton on hover */
+/** highlight the copy icon button on hover */
 .md-clipboard:hover,
 pre:hover .md-clipboard {
   color: var(--text-hover-color);
