Update Copyright in docs (#5076)

--- a/docs/overrides/partials/copyright-legal-socials.html
+++ b/docs/overrides/partials/copyright-legal-socials.html
@@ -1,12 +1,6 @@
 <div class="copyright-legal-socials-container">
     <div class="copyright">
-        <span class="copyright-first-line">Copyright 2023 Kedro</span>
-        <span class="copyright-second-line">by QuantumBlack, AI by McKinsey</span>
-    </div>
-    <div class="legal-links">
-        <a href="#">Terms of Use</a>
-        <a href="#">Privacy Policy</a>
-        <a href="#">Cookies</a>
+        <span class="copyright-first-line">Copyright © Kedro, a Series of LF Projects, LLC</span>
     </div>
     <div class="social-links">
         <a href="https://kedro-org.slack.com" target="_blank" rel="noopener" aria-label="Slack">
