--- a/docs/stylesheets/footer.css
+++ b/docs/stylesheets/footer.css
@@ -118,8 +118,9 @@
   .md-footer__link:hover {
     .md-footer__direction,
     .md-ellipsis,
-    .footer__button {
+    .md-footer__button {
       color: var(--text-hover-color);
+      opacity: 1;
     }
   }
 }
