--- a/docs/overrides/partials/copyright-legal-socials.html
+++ b/docs/overrides/partials/copyright-legal-socials.html
@@ -3,7 +3,7 @@
         <span class="copyright-first-line">Copyright © Kedro, a Series of LF Projects, LLC</span>
     </div>
     <div class="legal-links">
-        <a href="../legal/cookie_policy/">Cookies</a>
+        <a href="{{ base_url }}/legal/cookie_policy/">Cookies</a>
     </div>
     <div class="social-links">
         <a href="https://kedro-org.slack.com" target="_blank" rel="noopener" aria-label="Slack">
